[gd_scene load_steps=25 format=2]

[ext_resource path="res://src/CollisionTemplates/HurtBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Enemies/TheDude/HisDude/HisDudeIdleLeft.png" type="Texture" id=2]
[ext_resource path="res://Assets/Enemies/TheDude/HisDude/HisDudeIdleLeftRight.png" type="Texture" id=3]
[ext_resource path="res://src/Enemies/EnemyStats.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Enemies/TheDude/HisDude/HisDude.gd" type="Script" id=5]
[ext_resource path="res://Assets/Enemies/TheDude/HisDude/HisDudeLeapingLeft.png" type="Texture" id=6]
[ext_resource path="res://Assets/Enemies/TheDude/HisDude/HisDudeLeapingLeftRight.png" type="Texture" id=7]
[ext_resource path="res://Assets/Enemies/TheDude/HisDude/HisDudeLeapOffLeft.png" type="Texture" id=8]
[ext_resource path="res://Assets/Enemies/TheDude/HisDude/HisDudeLeapOffRight.png" type="Texture" id=9]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 288, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 288, 0, 96, 96 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "IdleRight",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "IdleLeft",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "LeapLeft",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "LeapOffRight",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "LeapRight",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "LeapOffLeft",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 45.4949, 32.7758 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 45.1445, 21.776 )

[node name="HisDude" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 7
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -48.4202 )
frames = SubResource( 13 )
animation = "LeapRight"
playing = true

[node name="StandingHurtBox" parent="." instance=ExtResource( 1 )]
collision_layer = 8
collision_mask = 7

[node name="CollisionShape2D" parent="StandingHurtBox" index="0"]
position = Vector2( 0, -32.5918 )
shape = SubResource( 14 )
disabled = true

[node name="LeapingHurtBox" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" parent="LeapingHurtBox" index="0"]
position = Vector2( 0, -55.8518 )
shape = SubResource( 15 )
disabled = true

[node name="EnemyStats" parent="." instance=ExtResource( 4 )]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="StandingHurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="area_entered" from="LeapingHurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="no_health" from="EnemyStats" to="." method="_on_EnemyStats_no_health"]

[editable path="StandingHurtBox"]

[editable path="LeapingHurtBox"]
